--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: IP Fabric Documentation
+site_name: IP Fabric Documentation Portal
 copyright: <a href="https://ipfabric.io">IP Fabric</a>
 theme:
   name: material
