Improve the author's email for the page builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build_main_pages:
   only:
     - main
   before_script:
-    - git config --global user.email "gl_ci_bot@bobek.cz"
+    - git config --global user.email "devops+gl_ci_bot@ipfabric.io"
     - git config --global user.name "ci_bot"
     - mkdir -pvm 0700 .ssh
     - echo "$ssh_deploy_key" > .ssh/gitlab-ci
