Featherlight lightbox for images

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,8 +13,17 @@ markdown_extensions:
   - admonition
   - attr_list
   - def_list
+  - featherlight
   - pymdownx.snippets
   - pymdownx.superfences:
+
+extra_javascript:
+  - vendor/jquery-3.6.0.min.js
+  - vendor/featherlight-v.1.7.14.min.js
+
+extra_css:
+  - vendor/featherlight-v.1.7.14.min.css
+  - vendor/featherlight.css
 
 extra:
   version:
