--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,9 +28,16 @@ strict_build_mr:
     - merge_requests
   script:
     - export DOC_TARGET=`mktemp -d`
-    - curl --fail -L -o /tmp/vale.tar.gz "$VALE_RELEASE"
-    - tar -C /tmp -zxvf /tmp/vale.tar.gz
     - pip install -r requirements.txt
     - mkdocs build -d "$DOC_TARGET" --strict
-    - /tmp/vale docs
     - rm -rf "$DOC_TARGET"
+
+vale_mr:
+  stage: test
+  only:
+    - merge_requests
+  allow_failure: true
+  script:
+    - curl --fail -L -o /tmp/vale.tar.gz "$VALE_RELEASE"
+    - tar -C /tmp -zxvf /tmp/vale.tar.gz
+    - /tmp/vale docs
