--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ extra_javascript:
 extra_css:
   - vendor/featherlight-v.1.7.14.min.css
   - vendor/featherlight.css
+  - stylesheets/theme.css
 
 extra:
   version:
