Update Azure documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,8 +14,9 @@ markdown_extensions:
   - attr_list
   - def_list
   - featherlight
-  - pymdownx.snippets
-  - pymdownx.superfences:
+  - pymdownx.snippets:
+      check_paths: true
+  - pymdownx.superfences
 
 extra_javascript:
   - vendor/jquery-3.6.0.min.js
