--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ mkdocs-material-extensions==1.0.3
 mkdocs-minify-plugin==0.5.0
 mkdocs-redirects==1.0.4
 git+https://github.com/it-novum/mkdocs-featherlight.git
+requests==2.27.1
+snakemd==0.10.1
