Make `main` warning more prominent

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ theme:
   name: material
   logo: assets/logo.png
   favicon: assets/favicon.png
+  custom_dir: overrides
   features:
     - navigation.tabs
     - search.suggest
