--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,11 @@ markdown_extensions:
   - featherlight
   - pymdownx.snippets:
       check_paths: true
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
 
 extra_javascript:
   - vendor/jquery-3.6.0.min.js
