--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+  - mdx_truly_sane_lists
 
 extra_javascript:
   - vendor/jquery-3.6.0.min.js
