--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ mkdocs-material==8.3.9
 mkdocs-material-extensions==1.0.3
 mkdocs-minify-plugin==0.5.0
 mkdocs-redirects==1.0.4
+mdx_truly_sane_lists==1.3
 git+https://github.com/it-novum/mkdocs-featherlight.git
 git+https://github.com/bobek/mkdocs-dashomatic.git
 requests==2.28.1
