--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ markdown_extensions:
   - attr_list
   - def_list
   - featherlight
+  - md_in_html
   - pymdownx.snippets:
       check_paths: true
   - pymdownx.superfences:
