--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 mike==1.1.2
 mkdocs==1.3.1
+mkdocs-glightbox==0.2.1
 mkdocs-material==8.4.0
 mkdocs-material-extensions==1.0.3
 mkdocs-minify-plugin==0.5.0
 mkdocs-redirects==1.0.6
 mdx_truly_sane_lists==1.3
-git+https://github.com/it-novum/mkdocs-featherlight.git
 git+https://github.com/bobek/mkdocs-dashomatic.git
 requests==2.28.1
 snakemd==0.10.1
