--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   GIT_STRATEGY: clone
   VALE_RELEASE: "https://github.com/errata-ai/vale/releases/download/v2.15.5/vale_2.15.5_Linux_64-bit.tar.gz"
 
-image: python
+image: registry.gitlab.com/autoboss/docs
 
 build_main_pages:
   stage: deploy
@@ -17,7 +17,6 @@ build_main_pages:
     - chmod 0400 .ssh/gitlab-ci
     - git remote set-url origin "$(perl -pe 's#.*@(.+?(\:\d+)?)/#git@\1:#' <<< $CI_REPOSITORY_URL)"
   script:
-    - pip install -r requirements.txt
     - git fetch origin gh-pages --depth=1
     - cp -v main_preamble.html overrides/main.html
     - mike deploy --push main
@@ -28,7 +27,6 @@ strict_build_mr:
     - merge_requests
   script:
     - export DOC_TARGET=`mktemp -d`
-    - pip install -r requirements.txt
     - mkdocs build -d "$DOC_TARGET" --strict
     - rm -rf "$DOC_TARGET"
 
