PM-250: configure link to public GH repo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,9 @@
 site_name: IP Fabric Documentation Portal
 copyright: <a href="https://ipfabric.io">IP Fabric</a>
+repo_url: https://github.com/ipfabric/docs
+repo_name: ipfabric/docs
+edit_uri: edit/main/docs/
+
 theme:
   name: material
   logo: assets/logo.png
