Add social links to footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,15 @@ extra_css:
   - stylesheets/theme.css
 
 extra:
+  social:
+    - icon: fontawesome/brands/facebook
+      link: https://www.facebook.com/ipfabric.io
+    - icon: fontawesome/brands/youtube
+      link: https://www.youtube.com/channel/UCLztlukjD9RKFGkrKgxMT1w/featured
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/IPFabric
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/company/ip-fabric/
   version:
     provider: mike
 
