--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,10 @@
 site_name: IP Fabric Documentation Portal
+site_url: https://docs.ipfabric.io
 copyright: <a href="https://ipfabric.io">IP Fabric</a>
 repo_url: https://github.com/ipfabric/docs
 repo_name: ipfabric/docs
 edit_uri: edit/main/docs/
+
 
 theme:
   name: material
