DOS-481: Switching to `ip-fabric` namespace

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   GIT_STRATEGY: clone
   VALE_RELEASE: "https://github.com/errata-ai/vale/releases/download/v2.15.5/vale_2.15.5_Linux_64-bit.tar.gz"
 
-image: registry.gitlab.com/autoboss/docs
+image: registry.gitlab.com/ip-fabric/documentation/docs
 
 build_main_pages:
   stage: deploy
