--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ vale_mr:
     - tar -C /tmp -zxvf /tmp/vale.tar.gz
     - 'find docs -name "*.md" \! -regex ".*/low-level_release_notes/.*" | xargs /tmp/vale'
 
-danger-trigger:
+danger:
   stage: test
   image: ruby:3.0
   only:
