Replace dash'o'matic with SmartyPants

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ markdown_extensions:
   - attr_list
   - def_list
   - md_in_html
+  - smarty
+  - pymdownx.smartsymbols
   - pymdownx.snippets:
       check_paths: true
   - pymdownx.superfences:
@@ -47,7 +49,6 @@ extra:
     provider: mike
 
 plugins:
-  - mkdocs-dashomatic:
   - search:
   - social:
   - glightbox:
