Add `pymdownx.details` to allow https://squidfunk.github.io/mkdocs-material/reference/admonitions/#collapsible-blocks

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,9 @@ markdown_extensions:
   - attr_list
   - def_list
   - md_in_html
+  - mdx_truly_sane_lists
   - smarty
+  - pymdownx.details
   - pymdownx.smartsymbols
   - pymdownx.snippets:
       check_paths: true
@@ -30,7 +32,6 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - mdx_truly_sane_lists
 
 extra_css:
   - stylesheets/theme.css
