Pimp navigation up a bit

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,9 +12,13 @@ theme:
   favicon: assets/favicon.png
   custom_dir: overrides
   features:
+    - navigation.expand
     - navigation.tabs
+    - navigation.tracking
+    - navigation.top
     - search.suggest
     - search.highlight
+    - toc.follow
 
 markdown_extensions:
   - admonition
