update configuration to match 9.0.0

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,10 @@ theme:
   favicon: assets/favicon.png
   custom_dir: overrides
   features:
+    - content.action.edit
+    - content.code.copy
     - navigation.expand
+    - navigation.footer
     - navigation.tabs
     - navigation.tracking
     - navigation.top
