--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,4 @@ plugins:
       version_selector: true
       css_dir: css
       javascript_dir: js
-      canonical_version:
-        null # the version for <link rel="canonical">; `null`
-        # uses the version specified via `mike deploy`
+      canonical_version: latest
