Pages tagged `draft` are not going to be built

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,10 @@ plugins:
   - social:
   - glightbox:
       zoomable: true
+  - mkdocs_exclude_tagged_files:
+      tags_to_exclude: 
+        - draft
+        - excluded
   - mike:
       version_selector: true
       css_dir: css
