--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -7,6 +7,10 @@ plugins:
   - tags:
   - glightbox:
       zoomable: true
+  - mkdocs_exclude_tagged_files:
+      tags_to_exclude: 
+        - draft
+        - excluded
   - mike:
       version_selector: true
       css_dir: css
