--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 mike==1.1.2
 mkdocs==1.4.2
+mkdocs-exclude-tagged-files==1.0.3
 mkdocs-glightbox==0.3.1
 mkdocs-material==9.0.15
 mkdocs-material-extensions==1.1.1
