Update favicon to the new shiny one

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,10 +5,9 @@ repo_url: https://github.com/ipfabric/docs
 repo_name: ipfabric/docs
 edit_uri: edit/main/docs/
 
-
 theme:
   name: material
-  logo: assets/logo.png
+  logo: assets/logo.svg
   favicon: assets/favicon.png
   custom_dir: overrides
   features:
@@ -78,7 +77,7 @@ plugins:
   - glightbox:
       zoomable: true
   - mkdocs_exclude_tagged_files:
-      tags_to_exclude: 
+      tags_to_exclude:
         - draft
         - excluded
   - mike:
