ST-174 Change background and social cards colors

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,9 @@ extra:
 plugins:
   - search:
   - social:
+      cards_color:
+        fill: "#264183"
+        text: "#FFFFFF"
   - glightbox:
       zoomable: true
   - mkdocs_exclude_tagged_files:
