--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -4,11 +4,14 @@ plugins:
   - meta:
   - search:
   - social:
+      cards_color:
+        fill: "#264183"
+        text: "#FFFFFF"
   - tags:
   - glightbox:
       zoomable: true
   - mkdocs_exclude_tagged_files:
-      tags_to_exclude: 
+      tags_to_exclude:
         - draft
         - excluded
   - mike:
