Turn on custom colors

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ theme:
     - toc.follow
 
   palette:
+    - primary: custom
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
