Update mkdocs material

--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -4,9 +4,11 @@ plugins:
   - meta:
   - search:
   - social:
-      cards_color:
-        fill: "#264183"
-        text: "#FFFFFF"
+      cards_layout: default/variant
+      concurrency: 2
+      cards_layout_options:
+        background_color: "#264183"
+        color: "#FFFFFF"
   - tags:
   - glightbox:
       zoomable: true
