Update mkdocs material
# Conflicts:
#	Makefile
#	mkdocs_insiders.yml
#	requirements.txt

--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -4,11 +4,16 @@ plugins:
   - meta:
   - search:
   - social:
+      cards_layout: default/variant
+      concurrency: 2
+      cards_layout_options:
+        background_color: "#264183"
+        color: "#FFFFFF"
   - tags:
   - glightbox:
       zoomable: true
   - mkdocs_exclude_tagged_files:
-      tags_to_exclude: 
+      tags_to_exclude:
         - draft
         - excluded
   - mike:
