--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,30 @@ extra_css:
   - stylesheets/theme.css
 
 extra:
+  analytics:
+    provider: google
+    property: G-2EJL11ZZ7X
+    feedback:
+      title: Was this page helpful?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: This page was helpful
+          data: 1
+          note: >-
+            Thanks for your feedback!
+        - icon: material/emoticon-sad-outline
+          name: This page could be improved
+          data: 0
+          note: >-
+            Thanks for your feedback! Help us improve this page by
+            using our <a href="https://ipfabric.atlassian.net/servicedesk/customer/portal/1" target="_blank" rel="noopener">support portal</a>.
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
   social:
     - icon: fontawesome/brands/facebook
       link: https://www.facebook.com/ipfabric.io
