--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: IP Fabric Documentation Portal
 site_url: https://docs.ipfabric.io
-copyright: <a href="https://ipfabric.io">IP Fabric</a>
+copyright: <a href="https://ipfabric.io"><img src="assets/logo_white.svg" width="200px" alt="IP Fabric Logo" /></a>
 repo_url: https://github.com/ipfabric/docs
 repo_name: ipfabric/docs
 edit_uri: edit/main/docs/
@@ -83,6 +83,7 @@ extra:
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
       make our documentation better.
+  generator: false
   social:
     - icon: fontawesome/brands/facebook
       link: https://www.facebook.com/ipfabric.io
