--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,13 @@ vale_mr:
     - tar -C /tmp -zxvf /tmp/vale.tar.gz
     - 'find docs -name "*.md" \! -regex ".*/release_notes_low-level/.*" | xargs /tmp/vale'
 
+seo_lint_mr:
+  stage: test
+  only:
+    - merge_requests
+  script:
+    - ./.gitlab/description_lint
+
 danger:
   stage: test
   image: ruby:3.0
