ST-131 Replace various variants with 'log in to'

--- a/vale-styles/ipf/hard_substitutions.yml
+++ b/vale-styles/ipf/hard_substitutions.yml
@@ -5,3 +5,10 @@ ignorecase: true
 # swap maps tokens in form of bad: good
 swap:
   click on: click
+  clicking on: clicking
+  clicked on: clicked
+  log into: log in to
+  logging into: logging in to
+  logged into: logged in to
+  login to: log in to
+  login into: log in to
