--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -17,6 +17,9 @@ plugins:
       tags_to_exclude:
         - draft
         - excluded
+  - multirepo:
+      cleanup: false
+      temp_dir: temp_multirepo
   - mike:
       version_selector: true
       css_dir: css
