--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ mkdocs-glightbox==0.3.4
 mkdocs-material==9.2.5
 mkdocs-material-extensions==1.1.1
 mkdocs-minify-plugin==0.7.1
+mkdocs-multirepo-plugin==0.6.2
 mkdocs-redirects==1.2.1
 mdx_truly_sane_lists==1.3
 cairosvg==2.7.1
