NIM-6319 Mention standart metric notation for table filtering

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,9 @@ markdown_extensions:
   - mdx_truly_sane_lists
   - smarty
   - pymdownx.details
+  - pymdownx.caret
   - pymdownx.smartsymbols
+  - pymdownx.tilde
   - pymdownx.snippets:
       check_paths: true
   - pymdownx.superfences:
