Pull in the Splunk TA integration documentation

--- a/docs/.pages.yml
+++ b/docs/.pages.yml
@@ -7,4 +7,5 @@ nav:
   - 'GUI': IP_Fabric_GUI
   - 'Settings': IP_Fabric_Settings
   - 'Administration': System_Administration
+  - 'Integrations': integrations
   - ...
