--- a/docs/.pages.yml
+++ b/docs/.pages.yml
@@ -8,4 +8,5 @@ nav:
   - 'Settings': IP_Fabric_Settings
   - 'Administration': System_Administration
   - 'Integrations': integrations
+  - 'Feature Matrix': https://matrix.ipfabric.io/
   - ...
