Open external links in a new tab (`target=_blank`)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ plugins:
       tags_to_exclude:
         - draft
         - excluded
+  - open-in-new-tab:
   - mike:
       version_selector: true
       css_dir: css
