--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -24,6 +24,7 @@ plugins:
         - section: 'splunk'
           section_path: 'integrations'
           import_url: 'https://gitlab.com/ip-fabric/integrations/splunk-ta-ip-fabric.git?branch=main'
+  - open-in-new-tab:
   - mike:
       version_selector: true
       css_dir: css
