--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mkdocs-material-extensions==1.2
 mkdocs-minify-plugin==0.7.1
 mkdocs-multirepo-plugin==0.6.3
 mkdocs-redirects==1.2.1
+mkdocs-open-in-new-tab==1.0.2
 mdx_truly_sane_lists==1.3
 cairosvg==2.7.1
 pillow==10.0.1
