Add update date to pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,8 @@ extra:
 plugins:
   - awesome-pages:
       filename: .pages.yml
+  - git-revision-date-localized:
+      strict: false
   - search:
   - social:
       cards_color:
