--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -3,6 +3,8 @@ INHERIT: mkdocs.yml
 plugins:
   - awesome-pages:
       filename: .pages.yml
+  - git-revision-date-localized:
+      strict: false
   - meta:
   - search:
   - social:
@@ -21,12 +23,12 @@ plugins:
       cleanup: false
       temp_dir: temp_multirepo
       repos:
-        - section: 'splunk'
-          section_path: 'integrations'
-          import_url: 'https://gitlab.com/ip-fabric/integrations/splunk-ta-ip-fabric.git?branch=main'
-        - section: 'NetBox Plugin'
-          section_path: 'integrations'
-          import_url: 'https://gitlab.com/ip-fabric/integrations/ipfabric-netbox.git?branch=main'
+        - section: "splunk"
+          section_path: "integrations"
+          import_url: "https://gitlab.com/ip-fabric/integrations/splunk-ta-ip-fabric.git?branch=main"
+        - section: "NetBox Plugin"
+          section_path: "integrations"
+          import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric-netbox.git?branch=main"
   - open-in-new-tab:
   - mike:
       version_selector: true
