--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mkdocs-material==9.4.14
 mkdocs-minify-plugin==0.7.1
 mkdocs-multirepo-plugin==0.6.3
 mkdocs-redirects==1.2.1
+mkdocs-git-revision-date-localized-plugin==1.2.1
 mkdocs-open-in-new-tab==1.0.3
 mdx_truly_sane_lists==1.3
 cairosvg==2.7.1
