--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -23,18 +23,24 @@ plugins:
       cleanup: false
       temp_dir: temp_multirepo
       repos:
-        - section: "IP Fabric Python SDK"
+        - section: "Python"
           section_path: "integrations"
           import_url: "https://gitlab.com/ip-fabric/integrations/python-ipfabric.git?branch=develop"
+        - section: "Postman"
+          section_path: "integrations"
+          import_url: "https://gitlab.com/ip-fabric/integrations/postman.git?branch=main"
         - section: "Splunk"
           section_path: "integrations"
           import_url: "https://gitlab.com/ip-fabric/integrations/splunk-ta-ip-fabric.git?branch=main"
-        - section: "NetBox Plugin"
+        - section: "NetBox"
           section_path: "integrations"
           import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric-netbox.git?branch=main"
-        - section: "Service Now Integration"
+        - section: "Service Now"
           section_path: "integrations"
           import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric-snow.git?branch=main"
+        - section: "Nornir"
+          section_path: "integrations"
+          import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric_nornir.git?branch=main"
   - open-in-new-tab:
   - mike:
       version_selector: true
