--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -10,3 +10,12 @@ MD013: false
 
 # Allow inline HTML
 MD033: false
+
+# We only allow fenced code blocks
+#MD046:
+#  style: fenced
+
+# Disabled because of admonitions
+# https://github.com/DavidAnson/markdownlint-cli2/issues/243
+# https://github.com/DavidAnson/markdownlint-cli2/pull/133
+MD046: false
