Reintroduce light-dark mode

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,10 +23,15 @@ theme:
     - toc.follow
 
   palette:
-    - primary: custom
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      scheme: default
+      scheme: ipfabric
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
@@ -36,7 +41,7 @@ theme:
       scheme: slate
       toggle:
         icon: material/brightness-4
-        name: Switch to light mode
+        name: Switch to system preference
 
 markdown_extensions:
   - admonition
