--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -23,6 +23,9 @@ plugins:
       cleanup: false
       temp_dir: temp_multirepo
       repos:
+        - section: "netbox"
+          section_path: "integrations"
+          import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric-netbox.git?branch=main"
         - section: "nornir"
           section_path: "integrations"
           import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric_nornir.git?branch=main"
