SD-666 😈 Enable Code Annotations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ theme:
   features:
     - content.action.edit
     - content.code.copy
+    - content.code.annotate
     - navigation.expand
     - navigation.footer
     - navigation.path
