--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,16 +2,12 @@ default:
   tags:
     - lowperf
 
-image: alpine:3.13
-pages:
+image: debian:bookworm
+deploy_to_production:
   stage: deploy
   only:
     - gh-pages
   script:
-    - mkdir .public
-    - cp -ra * .public/
-    - mv .public public
-  artifacts:
-    expire_in: "5 days"
-    paths:
-      - public
+    - apt-get install --yes curl zstd
+    - /usr/bin/tar --create --exclude-from=deploy-exclude.lst --use-compress-program='/usr/bin/zstd -T0 -9' --file=/tmp/ipf-docs-site.tar.zst ./
+    - /usr/bin/curl --fail --location --user "$UPLOAD_CREDENTIALS" --upload-file /tmp/ipf-docs-site.tar.zst https://docs-upload.ipf.cx/upload/ipf-docs-site.tar.zst
