SD-728 Change SDK branch

--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -34,7 +34,7 @@ plugins:
           import_url: "https://gitlab.com/ip-fabric/integrations/postman.git?branch=main"
         - section: "python"
           section_path: "integrations"
-          import_url: "https://gitlab.com/ip-fabric/integrations/python-ipfabric.git?branch=develop"
+          import_url: "https://gitlab.com/ip-fabric/integrations/python-ipfabric.git?branch=main"
         - section: "service-now"
           section_path: "integrations"
           import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric-snow.git?branch=main"
