--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   GIT_STRATEGY: clone
   VALE_RELEASE: "https://github.com/errata-ai/vale/releases/download/v2.15.5/vale_2.15.5_Linux_64-bit.tar.gz"
 
-image: 
+image:
   name: registry.gitlab.com/ip-fabric/documentation/docs
   pull_policy: always
 
@@ -17,7 +17,7 @@ build_main_pages:
     - main
   before_script:
     - git config --global user.email "devops+gl_ci_bot@ipfabric.io"
-    - git config --global user.name "docs_ci_bot"
+    - git config --global user.name "Bot IPFabric"
     - mkdir -pvm 0700 .ssh
     - echo "$ssh_deploy_key" > "$CI_PROJECT_DIR/.ssh/gitlab-ci"
     - chmod 0400 .ssh/gitlab-ci
@@ -35,7 +35,7 @@ strict_build_mr:
     - env
     - pwd
     - git config --global user.email "devops+gl_ci_bot@ipfabric.io"
-    - git config --global user.name "docs_ci_bot"
+    - git config --global user.name "Bot IPFabric"
     - mkdir -pvm 0700 .ssh
     - echo "$ssh_deploy_key" > "$CI_PROJECT_DIR/.ssh/gitlab-ci"
     - chmod 0400 .ssh/gitlab-ci
