--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
-  GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no -i \"${CI_PROJECT_DIR}/.ssh/gitlab-ci\""
+  GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no -i "${CI_PROJECT_DIR}/.ssh/gitlab-ci"'
   GIT_STRATEGY: clone
-  VALE_RELEASE: "https://github.com/errata-ai/vale/releases/download/v2.15.5/vale_2.15.5_Linux_64-bit.tar.gz"
+  VALE_RELEASE: "https://github.com/errata-ai/vale/releases/download/v3.9.1/vale_3.9.1_Linux_64-bit.tar.gz"
 
 image:
   name: registry.gitlab.com/ip-fabric/documentation/docs
@@ -54,9 +54,13 @@ vale_mr:
     - merge_requests
   script:
     - ls -al
-    - curl --fail -L -o /tmp/vale.tar.gz "$VALE_RELEASE"
-    - tar -C /tmp -zxvf /tmp/vale.tar.gz
-    - 'find docs temp_multirepo -name "*.md" \! -regex ".*/release_notes_low-level/.*" | xargs /tmp/vale'
+    - rm -rf /tmp/vale && mkdir /tmp/vale
+    - curl --fail -L -o /tmp/vale/vale.tar.gz "$VALE_RELEASE"
+    - echo "$VALE_RELEASE"
+    - tar -C /tmp/vale -zxvf /tmp/vale/vale.tar.gz
+    - apk add gcompat libstdc++ libgcc
+    - 'find docs temp_multirepo -name "*.md" \! -regex ".*/release_notes_low-level/.*" \! -regex ".*/previous_releases/.*" | xargs /tmp/vale/vale'
+    - rm -rf /tmp/vale
 
 seo_lint_mr:
   stage: test
