--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -41,6 +41,9 @@ plugins:
         - section: "splunk"
           section_path: "integrations"
           import_url: "https://gitlab.com/ip-fabric/integrations/splunk-ta-ip-fabric.git?branch=main"
+        - section: "infoblox"
+          section_path: "integrations"
+          import_url: "https://gitlab.com/ip-fabric/integrations/ipfabric-infoblox.git?branch=main"
   - open-in-new-tab:
   - mike:
       version_selector: true
