Update social plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,8 +115,8 @@ plugins:
       strict: false
   - search:
   - social:
-      cards_color:
-        fill: "#264183"
+      cards_layout_options:
+        background_color: "#143352"
         text: "#FFFFFF"
   - glightbox:
       zoomable: true
