moved social colors from  mkdocs to mkdocs_insiders

--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -9,6 +9,9 @@ plugins:
   - search:
   - social:
       cards_layout: default/variant
+      cards_layout_options:
+        background_color: "#143352"
+        color: "#FFFFFF"
   - tags:
   - glightbox:
       zoomable: true
