--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ theme:
     - content.action.edit
     - content.code.copy
     - content.code.annotate
-    - navigation.expand
+    #- navigation.expand
     - navigation.footer
     - navigation.path
     - navigation.tabs
