--- a/docs/releases/release_notes/.pages.yml
+++ b/docs/releases/release_notes/.pages.yml
@@ -2,15 +2,4 @@ nav:
   - 7.2.md
   - 7.0.md
   - 6.10.md
-  - 6.9.md
-  - 6.8.md
-  - 6.7.md
-  - 6.6.md
-  - 6.5.md
-  - 6.4.md
-  - 6.3.md
-  - 6.2.md
-  - 6.1.md
-  - 6.0.md
-  - 5.0.md
-  - ...
+  - previous_releases
