--- a/docs/releases/release_notes_low-level/.pages.yml
+++ b/docs/releases/release_notes_low-level/.pages.yml
@@ -1,6 +1,7 @@
 title: Low Level Release Notes
-nav: 
+nav:
   - 7.x
-  - 6.x
-  - 5.x
-  - 4.x
+  - Previous Releases:
+      - 6.x
+      - 5.x
+      - 4.x
