--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,4 @@ deploy_to_production:
   script:
     - apt-get update && apt-get install --yes curl zstd && rm -rf /var/lib/apt/lists/*
     - /usr/bin/tar --create --exclude-from=deploy-exclude.lst --use-compress-program='/usr/bin/zstd -T0 -9' --file=/tmp/ipf-docs-site.tar.zst ./
-    - /usr/bin/curl --fail --location --user "$UPLOAD_CREDENTIALS" --upload-file /tmp/ipf-docs-site.tar.zst https://docs-upload.ipf.cx/upload/ipf-docs-site.tar.zst
+    - /usr/bin/curl --fail --location --user "$UPLOAD_CREDENTIALS" --upload-file /tmp/ipf-docs-site.tar.zst https://docs-upload-dr.ipf.cx/upload/ipf-docs-site.tar.zst
