ST-476_Migrate_awesome-pages_awesome-nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,8 +109,8 @@ extra:
     provider: mike
 
 plugins:
-  - awesome-pages:
-      filename: .pages.yml
+  - awesome-nav:
+      filename: .nav.yml
   - git-revision-date-localized:
       strict: false
   - search:
