--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 mike==2.1.3
+mkdocs==1.6.0
+mkdocs-awesome-nav==3.2.0
 mkdocs==1.6.1
-mkdocs-awesome-pages-plugin==2.10.1
 mkdocs-exclude-tagged-files==1.0.4
 mkdocs-glightbox==0.5.2
 mkdocs-material==9.7.0
@@ -13,4 +14,3 @@ mdx_truly_sane_lists==1.3
 cairosvg==2.8.2
 pillow==12.0.0
 requests==2.32.5
-snakemd==2.4.0
