--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 mike==2.1.3
-mkdocs==1.6.0
 mkdocs-awesome-nav==3.2.0
 mkdocs==1.6.1
 mkdocs-exclude-tagged-files==1.0.4
@@ -14,3 +13,4 @@ mdx_truly_sane_lists==1.3
 cairosvg==2.8.2
 pillow==12.0.0
 requests==2.32.5
+snakemd==2.4.0
