--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -1,12 +1,13 @@
 nav:
 - Getting Started:
-  - index.md
-  - overview
-  - Platform First Steps: platform_first_steps
-- API: IP_Fabric_API
-- GUI: IP_Fabric_GUI
-- Settings: IP_Fabric_Settings
-- Administration: System_Administration
-- Integrations: integrations
+  - /index.md
+  - Overview: /overview/
+  - Platform First Steps: /platform_first_steps/
+- API: /IP_Fabric_API/
+- GUI: /IP_Fabric_GUI/
+- Settings: /IP_Fabric_Settings/
+- Administration: /System_Administration/
+- Integrations: /integrations/
 - Feature Matrix: https://matrix.ipfabric.io/
-- "*"
+- Releases: /releases/
+- Support: /support/
