Revert range: restore main to state before Richard's change

--- a/mkdocs_insiders.yml
+++ b/mkdocs_insiders.yml
@@ -1,8 +1,8 @@
 INHERIT: mkdocs.yml
 
 plugins:
-  - awesome-nav:
-      filename: .nav.yml
+  - awesome-pages:
+      filename: .pages.yml
   - git-revision-date-localized:
       strict: false
   - meta:
