--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 mike==2.1.3
-mkdocs-awesome-nav==3.2.0
 mkdocs==1.6.1
+mkdocs-awesome-pages-plugin==2.10.1
 mkdocs-exclude-tagged-files==1.0.4
 mkdocs-glightbox==0.5.2
 mkdocs-material==9.7.0
