ST-526_unsupported_integrations-DOCs

--- a/docs/integrations/.pages.yml
+++ b/docs/integrations/.pages.yml
@@ -1,11 +1,12 @@
 nav:
   - IP Fabric Integrations: index.md
-  - Python: python
-  - Dynamic Attributes: dynamic-attributes
-  - Infoblox: infoblox
   - NetBox: netbox
-  - Nornir: nornir
-  - Postman: postman
+  - Python: python
   - ServiceNow: service-now
   - Splunk: splunk
-  - ...
+  - Not Maintained:
+      - Dynamic Attributes: dynamic-attributes
+      - Infoblox: infoblox
+      - Nornir: nornir
+      - Postman: postman
+      - ...
