Remove banner and improve integrations

--- a/docs/integrations/.pages.yml
+++ b/docs/integrations/.pages.yml
@@ -4,7 +4,7 @@ nav:
   - Python: python
   - ServiceNow: service-now
   - Splunk: splunk
-  - Not Maintained:
+  - Partner-Led Integrations:
       - Dynamic Attributes: dynamic-attributes
       - Infoblox: infoblox
       - Nornir: nornir
