--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ cairosvg==2.8.2
 pillow==12.0.0
 requests==2.32.5
 snakemd==2.4.0
-pydantic-ai>=0.0.14
-python-dotenv>=1.0.0
-pydantic>=2.0.0
+pydantic-ai==1.25.0
+python-dotenv==1.2.1
+pydantic==2.12.5
